<resources>
    <string name="app_name">Comfort Shoe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="login">Login</string>
    <string name="new_account">New Account</string>
    <string name="welcome_title">Welcome \n To \n Your Comfort</string>
    <string name="welcome_text">You may need to tie \n but in all cases you will feel free</string>
    <string name="start_your_journey">Start your journey</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt \n
    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip \n
    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="start_the_show">Start The Show</string>
    <string name="welcome">Welcome</string>
    <string name="shoe_list">Shoe List</string>
    <string name="fragment_shoe_detail">Shoe Details</string>
    <string name="name">Name :</string>
    <string name="size">Size :</string>
    <string name="company">Company :</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>